paypal events added

--- a/backend/kb_backend/mailService/mailTemplates/subscriptionPaymentFailed.html
+++ b/backend/kb_backend/mailService/mailTemplates/subscriptionPaymentFailed.html
@@ -66,17 +66,17 @@
         </tr>
         <tr align="center">
             <td style="padding-left: 15px; padding-right: 15px; padding-top:15px;">
-                <h1>Sorry to see you go..</h1>  
+                <h1>Are you okay?</h1>  
             </td>
         </tr>
         <tr>
             <td style="padding-left: 15px; padding-right: 15px;">
-                <p>Hey there,  </p>
-                <p>We're sorry to see you go! &#x1F641; </p>
-                <p> We received your request to cancel your subscription to QRExp. Your subscription will be cancelled right away.
-                    We hope that your experience with QRExp was a positive one and we'd love to hear your feedback on how we can improve. If you have any concerns, please don't hesitate to contact us &#x1F4AC; at <a href="mailto:support@qrexp.pro">support@qrexp.pro</a>
-                <p>Thank you for being a part of QREXp.</p><p> We wish you all the best in your future endeavors.</p>
-                </td>
+                <p>Hello!</p>
+                <p>We hope this email finds you well. We wanted to let you know that the recent payment for your QRExp subscription has failed. As a result, your subscription is currently inactive.</p>
+                <p>To ensure uninterrupted access to our service and continue generating QR codes, we kindly ask you to update your payment information as soon as possible.
+                <p>If you have any questions about your subscription or need assistance with updating your payment information, please don't hesitate to contact our support team at <a href="mailto:support@qrexp.pro">support@qrexp.pro</a>. We are always here to help.</p>
+                <p>Thank you for choosing QRExp as your QR generator service!<br> We look forward to hearing from you.</p>
+            </td>
             </tr>
         <tr align="right">
             <td style="padding-left: 15px; padding-right: 15px;">
