--- a/backend/kb_backend/mailService/mailTemplates/subscriptionReActivated.html
+++ b/backend/kb_backend/mailService/mailTemplates/subscriptionReActivated.html
@@ -66,16 +66,16 @@
         </tr>
         <tr align="center">
             <td style="padding-left: 15px; padding-right: 15px; padding-top:15px;">
-                <h1>Sorry to see you go..</h1>  
+                <h1>Welcome back! </h1>  
             </td>
         </tr>
         <tr>
             <td style="padding-left: 15px; padding-right: 15px;">
-                <p>Hey there,  </p>
-                <p>We're sorry to see you go! &#x1F641; </p>
-                <p> We received your request to cancel your subscription to QRExp. Your subscription will be cancelled right away.
-                    We hope that your experience with QRExp was a positive one and we'd love to hear your feedback on how we can improve. If you have any concerns, please don't hesitate to contact us &#x1F4AC; at <a href="mailto:support@qrexp.pro">support@qrexp.pro</a>
-                <p>Thank you for being a part of QREXp.</p><p> We wish you all the best in your future endeavors.</p>
+                <p>Ahoy!</p>
+                <p>We wanted to take a moment to thank you for reactivating your QRExp subscription. We are delighted to have you back as a valued member of our community.</p>
+                <p> With your renewed subscription, you can continue to generate high-quality QR codes and unlock all the benefits of our service. We appreciate your trust in us and we are committed to providing you with the best experience possible.</a>
+                <p>If you have any questions or feedback about our service, please do not hesitate to reach out to us at <a href="mailto:support@qrexp.pro">support@qrexp.pro</a>. We always welcome your feedback and suggestions.</p>
+                <p>Once again, thank you for choosing QRExp. We look forward to serving you and helping you achieve your goals.  &#x1F64F; </p>
                 </td>
             </tr>
         <tr align="right">
